# pymoney

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/workflows/: tests.yml
src/pymoney/: money.py
tests/: conftest.py  test_money.py  test_money_error.py
