[metadata]
name = pymoney
description = A high-precision Python library for handling monetary values, ensuring accuracy and precision in financial calculations.
author = Diogo Jerónimo
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
packages =
    pymoney
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
